--- a/templates/modgenere.html
+++ b/templates/modgenere.html
@@ -57,9 +57,9 @@
 {% include '/buttons/goback.html' %}
 {% include '/buttons/gestgeneri.html' %}
 {% include '/buttons/dashboard.html' %}
-<button onclick="rinomina()"><i class="icon ion-md-cube"></i>Rinomina</button>
-<label for="selettore" class="menubutton"><i class="icon ion-md-cube"></i>Carica foto</label>
-<button onclick="eliminafoto()"><i class="icon ion-md-cube"></i>Elimina foto</button>
+<button onclick="rinomina()"><i class="icon ion-md-create"></i>Rinomina</button>
+<label for="selettore" class="menubutton"><i class="icon ion-md-image"></i>Carica foto</label>
+<button onclick="eliminafoto()"><i class="icon ion-md-trash"></i>Elimina foto</button>
 <!-- <button onclick="elimina()"><i class="icon ion-md-cube"></i>Elimina genere</button> -->
 {% endblock %}
 {% block body %}
