solved bug for unregistered checkout

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,4 +11,9 @@
 <form action="/search" class="searchbox" method="GET" >
     <input type="text" class="formtextinput searchboxinput" name="string" placeholder="Cerca libro"><button type="submit" class="searchboxbutton"><i class="icon ion-md-search"></i></button>
 </form>
+
+{%for ordine in ordini%}
+
+{%endfor%}
+
 {% endblock %}
