--- a/templates/buttons/getordine.html
+++ b/templates/buttons/getordine.html
@@ -1,4 +1,4 @@
-<button onclick="getordine()"><i class="icon ion-md-cube"></i>Apri ordine</button><script>
+<button onclick="getordine()"><i class="icon ion-md-clipboard"></i>Apri ordine</button><script>
     function getordine(){
         var r = prompt("Inserisci il codice dell'ordine",'');
         if (r !=null) {
