--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -63,9 +63,9 @@
                 <label class="definizionelista">Paese/Stato*:</label>
                 <input type="text" placeholder="Paese/Stato: ( Italia,...)" name="o_paese" class="formtextinput required" required>
                 <label class="definizionelista">Numero di telefono*:</label>
-                <input type="text" placeholder="Numero di telefono" name="o_numtel" class="formtextinput required" required>
+                <input type="text" maxlength="15" placeholder="Numero di telefono" name="o_numtel" class="formtextinput required" required>
                 <label class="definizionelista">CAP:</label>
-                <input type="text" placeholder="CAP" name="o_cap" class="formtextinput">
+                <input type="text"maxlength="5" placeholder="CAP" name="o_cap" class="formtextinput">
                 <span class="definizione">* parametro obbligatorio.</span>
             </div>
         </div>
