Risolto bug getOrdiniUtente() e modificato gli autori

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,7 @@
         <div id="menu" class="width100">{% block menu %}{% endblock %}</div>
         {% block body %}{% endblock %}
     </div>
-    <div id = "bottom">by Daniele e Andrea</div>
+    <div id = "bottom">Authors: Daniele Capponi, Andrea Dall'Alba</div>
     </body>
 
 </html>
