--- a/templates/buttons/dashboard.html
+++ b/templates/buttons/dashboard.html
@@ -1,1 +1,1 @@
-<a href="/dashboard"><i class="icon ion-md-clipboard"></i>Dashboard</a>
+<a href="/dashboard"><i class="icon ion-md-options"></i>Dashboard</a>
