add handling of unique error

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,7 +31,7 @@ function check(idord){
 
 
 {% block body %}
-<h2>Dashboard - {{session['username']}} - id({{session['userid']}})</h2>
+<h2 style="text-align: center;">Dashboard - {{session['username']}} - id({{session['userid']}})</h2>
 <form action="/search" class="searchbox" method="GET" >
     <input type="text" class="formtextinput searchboxinput" name="string" placeholder="Cerca libro"><button type="submit" class="searchboxbutton"><i class="icon ion-md-search"></i></button>
 </form>
