--- a/templates/insalterbook.html
+++ b/templates/insalterbook.html
@@ -17,7 +17,7 @@ Inserisci libro
     <input type="text" maxlength="13" placeholder="ISBN"  class="formtextinput" disabled value="{{libro['isbn']}}">
     <input type="hidden" name="isbn" value="{{libro['isbn']}}">
     {%else%}
-    <input type="text" maxlength="13" placeholder="ISBN" name="isbn" required  class="formtextinput">
+    <input type="text" minlength="13" maxlength="13" placeholder="ISBN" name="isbn" required  class="formtextinput">
     {%endif%}
     
 
